# MultiDataPlotting

./: LICENSE  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
src/: plot_module.py
src/multidataplotting/: __init__.py  plot_module.py
