[metadata]
name = MultiDataPlotting
version = 0.4.0
author = Wei Wang
author_email = wwang487@wisc.edu
description = A package for plotting multiple datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/yourusername/MultiDataPlotting
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    pandas
    seaborn
    scipy
    setuptools
    pytest
    datetime

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
