[metadata]
name = MultiDataPlotting
version = 1.1.0
author = Wei Wang
author_email = wwang487@wisc.edu
description = A package for plotting multiple datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/wwang487/MultiDataPlotting
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    pandas
    seaborn
    scipy
    setuptools
    pytest
    datetime
    scikit-learn
    contextily
    python-ternary

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
